syntax = "proto3";
package sgenetwork.sge.sportevent;

import "gogoproto/gogo.proto";
import "sge/sportevent/params.proto";
import "sge/sportevent/sport_event.proto";

option go_package = "github.com/sge-network/sge/x/sportevent/types";

// GenesisState defines the sport-event module's genesis state.
message GenesisState {
  // params are the parameters of sport-event module.
  Params params = 1 [ (gogoproto.nullable) = false ];
  // sport_event_list is the list of sport-events that are available in the
  // chain init.
  repeated SportEvent sport_event_list = 2 [ (gogoproto.nullable) = false ];
}
